# Dharma-RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.ru.md  ROADMAP.md  alembic.ini  docker-compose.yml  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/agents/: README.md  buddhist-scholar-proxy.md  dharma-code-reviewer.md  eval-analyst.md
.github/workflows/: ci.yml  deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 20260421_001_initial_frbr.py  20260421_002_author_slug_sc_seeds.py  20260423_003_chunk_fts_vector.py  20260427_004_chunk_contextual_columns.py  20260502_005_app_feedback.py  20260508_006_russian_translator_seeds.py  20260509_007_dharmaseed_source_type.py
consent-ledger/: README.md
consent-ledger/open-license/: academic-papers.yaml  access-to-insight.yaml  ancient-buddhist-texts.yaml  dhammatalks-org.yaml  mahasi-free-works.yaml  pts-cc-works.yaml
consent-ledger/public-domain/: pa-auk-knowing-and-seeing.yaml  suttacentral-cc0.yaml  visuddhimagga-pe-maung-tin.yaml
data/: README.md
data/glossary/: cyrillic.yaml  foundational.yaml
docs/: APP_DEVELOPMENT_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CONTRACT_ANSWER.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dharma-RAG-Research-EN.md  Dharma-RAG.md  EMBEDDING_ARCHITECTURE_DECISIONS.md  EVALUATION.md  EVAL_ABLATION_v0.0e.md  EVAL_ANSWER_MODELS.md  EVAL_BASELINE.md  EVAL_CONTEXTUAL_AB.md  EVAL_CONTEXT_MODELS.md  EVAL_PALI_GLOSSARY.md  EVAL_PALI_GLOSSARY_TARGETED.md  EVAL_PALI_TUNING.md  EVAL_RAG_DAY_32.md  FAILURE_PATTERNS.md  FEATURE_ROADMAP.md  GRAPH_VS_EMBEDDING_RERESEARCH_2026.md  KNOWLEDGE_GRAPHS_VS_VECTOR_SEARCH.md  PRIVACY.md  QA040_INVESTIGATION.md  RAG_DEVELOPMENT_PLAN.md  RAG_PIPELINE.md  RELEASE_v0.0.2.md  RELEASE_v0.0.3.md  RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  Re-research Graph vs embedding research 2026.md  SECURITY.md  SOURCES_CATALOG.md  STATUS.md  The Complete Guide to Text Embedding Models for RAG and Semantic Search 2025–2026.md  VOICE_PIPELINE.md
docs/concepts/: 01-rag-pipeline-overview.md  02-frbr-corpus-model.md  03-chunking-parent-child.md  04-bge-m3-encoder.md  05-qdrant-named-vectors.md  06-postgres-fts-bm25.md  07-rrf-hybrid-fusion.md  08-observability-phoenix.md  09-eval-and-golden-set.md  10-cross-encoder-reranking.md  11-contextual-retrieval.md  12-parent-child-retrieval.md  13-rag-service-contract.md  14-pali-glossary.md  15-answer-generation.md  16-openapi-typegen.md  17-base-layout.md  18-reading-room.md  19-chat-mvp.md  20-citation-hover-preview.md  21-confidence-indicator.md  22-sse-streaming.md  23-feedback-widget.md  24-pull-quote-side-panel.md  25-byok-ui.md  26-failure-analysis.md  27-qa040-anomaly.md  28-definitional-expansion.md  29-bm25-translation-bridge.md  30-russian-foundational-expansion.md  32-cumulative-eval.md  33-khuddaka-ingest.md  34-russian-sc-ingest.md  35-failure-driven-curation.md  36-infinite-thread.md  37-dharmaseed-corpus.md  38-dharmaseed-reading-room.md  INDEX.md
docs/contextual/: validation_input.md  validation_output_opus_v1.md
docs/decisions/: 0001-phase1-architecture.md
docs/eval/: golden_pali_targeted.yaml  golden_v0.0_extended.yaml  golden_v0.0_synthetic.yaml
docs/old/: ARCHITECTURE_APPLICATION_UX_ANALYSIS.md  ARCHITECTURE_RAG_RESEARCH.md  BUDDHIST_TEXT_CORPORA_RESEARCH.md  DAY_BY_DAY_PLAN.md  DHARMA_RAG_EXPLAINED.md  DHARMA_RAG_EXPLAINED_EN.md  DHARMA_RAG_TECHNICAL_AUDIT.md  Dharma-RAG-Research-EN.md  Dharma-RAG-Research-RU.md  Dharma_RAG_RESEARCH.md  (+7 more)
scripts/: build_dpd_glossary.py  compare_answer_models.py  compare_context_models.py  contextualize_corpus.py  eval_ablation_v0.0e.py  eval_contextual_ab.py  eval_failure_analysis.py  eval_pali_glossary.py  eval_pali_tuning.py  eval_rag_day_32.py  eval_retrieval.py  export_openapi.py  extract_validation_sample.py  index_qdrant.py  ingest_dharmaseed.py  ingest_sc.py  investigate_qa040.py  md_to_pdf.py  merge_pdfs.py  rechunk.py  reclean_chunks.py  reindex_qdrant_v2.py  sc_dryrun.py  smoke_bm25.py  smoke_hybrid.py  smoke_kn.py  smoke_rag_day_30.py  smoke_rerank.py  smoke_retrieval.py  smoke_ru.py  test_bge_m3.py  test_claude.py  test_setup.py
src/: __init__.py  cli.py  config.py  logging_config.py
tests/: conftest.py
web/: .gitignore  next.config.ts  package.json
(+138 files in other folders)
