[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dharma-rag"
version = "0.0.3"
description = "Open-source multilingual RAG for Buddhist contemplative teachings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dharma RAG Contributors" }
]
keywords = ["rag", "buddhism", "meditation", "dharma", "ai", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Religion",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.3",

    # LLM
    "anthropic>=0.39.0",
    "litellm>=1.51.0",  # multi-provider fallback

    # Embedding & retrieval
    # transformers is pinned <5.0 because FlagEmbedding 1.3.5 (latest
    # as of 2026-04) still uses pre-5.x APIs (is_torch_fx_available,
    # etc.). Lift the cap once FlagEmbedding ships a transformers-5
    # compatible release.
    "sentence-transformers>=3.2.1,<4.0",
    "torch>=2.5.0",
    "transformers>=4.46.0,<5.0",
    "FlagEmbedding>=1.3.0",  # BGE-M3 hybrid (dense + sparse + ColBERT)

    # Vector DB
    "qdrant-client>=1.12.0",

    # Relational DB — FRBR corpus + app tables
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",  # async driver
    "psycopg[binary]>=3.2.0",  # sync driver for Alembic
    "alembic>=1.14.0",
    "greenlet>=3.1.0",  # required by SQLAlchemy async

    # Search
    "rank-bm25>=0.2.2",

    # Data processing
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "pyyaml>=6.0.2",
    "tiktoken>=0.8.0",
    "langdetect>=1.0.9",

    # Observability — ADR-0001 transitions from Langfuse to Phoenix
    # (OpenTelemetry + OpenInference). FastAPI / HTTPX are instrumented
    # via OpenTelemetry's own packages; OpenInference adds AI-specific
    # semantic conventions on top. Langfuse kept as a transitional dep
    # for v0.0.x; removed when the migration is complete.
    "arize-phoenix>=7.0.0",
    "arize-phoenix-otel>=0.6.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "openinference-semantic-conventions>=0.1.0",
    "langfuse>=2.53.0",
    "structlog>=24.4.0",

    # HTTP & utilities
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.28.0",
    "ipykernel>=6.29.5",
]

eval = [
    "ragas>=0.2.3",
    "deepeval>=1.5.0",
    "datasets>=3.0.2",
    "voyageai>=0.3.0",
    "cohere>=5.11.0",
    "openai>=1.54.0",
]

bot = [
    "aiogram>=3.13.0",
]

advanced = [
    # For Phase 2-3
    "llama-index>=0.12.0",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "pydantic-ai>=0.0.13",
    "instructor>=1.6.4",
]

transcription = [
    # For audio pipeline (Phase 2)
    "faster-whisper>=1.0.3",
    "whisperx>=3.1.5",
    "pyannote.audio>=3.3.2",
    "groq>=0.11.0",
    "silero-vad>=5.1.2",
]

voice = [
    # For voice chat (Phase 3)
    "pipecat-ai>=0.0.50",
    "deepgram-sdk>=3.7.0",
    "elevenlabs>=1.10.0",
    "livekit>=0.18.0",
    "livekit-agents>=0.10.0",
]

[project.scripts]
dharma-rag = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S"]
ignore = ["E501", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
